--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -13,7 +13,7 @@
       .banner{
         height: 220px;
         background-size: 100% auto;
-        background-image: url('../static/img/bullbeareagle.jpg');
+        background-image: url('/static/img/bullbeareagle.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
