--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -13,7 +13,7 @@
       .banner{
         height: 220px;
         background-size: 100% auto;
-        background-image: url("{{ url_for('static',filename='img/bullbeareagle.jpg') }}");
+        background-image: url("");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
