added execution page

--- a/templates/execute.html
+++ b/templates/execute.html
@@ -10,5 +10,10 @@
     <h1>This is Execution page</h1>
     <br>
     <h3>{{message}}</h3>
+    <hr>
+    <div>{{popularity}}</div>
+    <hr>
+    <div><strong>Top 10 names Trending Score: </strong>
+        {{trending}}</div>
 </body>
 </html>
