--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -45,6 +45,8 @@
     <div class="container banner mb-5"></div>
 
     <div class="container align-items-center">
+      <!-- <img src="{{url_for('static', filename='img/bullbeareagle.jpg')}}" alt="imgbbe"> -->
+
       <div class="btn-lg">
         <button class="btn btn-primary" type="button" data-toggle="collapse" href="" data-target="#mCollapse" role="button" aria-expanded="false" aria-controls="mCollapse" id="SG">Singapore</button>  <!-- onclick="changeImage()" -->
         <button class="btn btn-warning" type="button" data-toggle="collapse" data-target="#mCollapse" aria-expanded="false" aria-controls="mCollapse" id="HKC">HK+China</button>  <!-- onclick="changeImage()" -->
@@ -101,7 +103,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="../js/projFrontEnd.js"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
+    <script src="../static/js/projFrontEnd.js"></script>
   </body>
 </html>
