changed main.py results.html

--- a/templates/results.html
+++ b/templates/results.html
@@ -7,7 +7,10 @@
     <title>Execution</title>
 </head>
 <body>
-    <h1>This is Execution page</h1>
+    <br>
+    <h1>Begin executing the main process... please be VERY patient</h1>
+    <br><br>
+    <h1>Results: </h1>
     <br>
     <h3>{{message}}</h3>
     <hr>
