debugging the images still

--- a/templates/results.html
+++ b/templates/results.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <br>
-    <h1>Begin executing the main process... please be VERY patient</h1>
-    <br><br>
-    <h1>Results: </h1>
+    <h1>Results Page: </h1>
     <br>
     <h3>{{message}}</h3>
     <hr>
