--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -70,17 +70,17 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100 border border-dark " src="img/tm_backtest_cht_10SG_largeCaps20210314W14.png" alt="first" id="img1">
+                  <img class="d-block w-100 border border-dark " src="https://drive.google.com/uc?id=1K5zVD11NJTy13NTct3ZFvs91nSy5_cgD" alt="first" id="img1">
                   <div class="carousel-caption d-none d-sm-block text-info ">
                   <h5> Past 5 Years <em>Backtest</em> Results</h5>
                 </div>
               </div>          
                 <div class="carousel-item border border-dark">
-                  <img class="d-block w-100 " src="img/tm_mergeImg10SG_largeCaps20210314W1.jpg" alt="second" id="img2">
+                  <img class="d-block w-100 " src="https://drive.google.com/uc?id=19uAJ8cQDswD6eizLQQ6redKJqLg1hXz9" alt="second" id="img2">
 
                 </div>
                 <div class="carousel-item border border-dark">
-                  <img class="d-block w-100" src="img/tm_mergeImg10SG_largeCaps20210314W4.jpg" alt="third" id="img3">
+                  <img class="d-block w-100" src="https://drive.google.com/uc?id=1hw1EOTQznRE5yE00HWknjD_KcvhiQtkh" alt="third" id="img3">
                 </div>
 
               </div>
