--- a/templates/results.html
+++ b/templates/results.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Execution</title>
 </head>
+
 <body>
     <br>
     <h1>Results Page: </h1>
     <br>
     <h3>{{message}}</h3>
     <hr>
-    <div>{{popularity}}</div>
+    <div><strong>Short Term Popular Stocks:</strong>
+        {% for table1 in table_popularity %}
+        {{table1|safe}}
+        {% endfor %}
+    </div>
     <hr>
-    <div><strong>Top 10 names Trending Score: </strong>
-        {{trending}}</div>
+    <div><strong>Past {{popularPeriod}} days Stocks by Popularity: </strong>
+        {% for table2 in table_trending %}
+        {{table2|safe}}
+        {% endfor %}
+    </div>
 </body>
+
 </html>
