simple working order

--- a/templates/wait.html
+++ b/templates/wait.html
@@ -2,10 +2,10 @@
 
 <head>
     <script>
-        // function navigate() {
-        //     window.location.href = 'results';  // redirect when done!
-        // }
-        fetch('results') //.then(navigate); // load the slow url then navigate
+        function navigate() {
+            window.location.href = 'results';  // redirect when done!
+        }
+        fetch('results').then(navigate); // load the slow url then navigate
     </script>
 </head>
 
